--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,18 @@
     <pluginManagement>
       <plugins>
         <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>org.optaplanner.examples.shifts.app.ShiftsTopLevel</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <configuration>
